--- a/my-smart-home/Base.lproj/LaunchScreen.storyboard
+++ b/my-smart-home/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,13 +16,36 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="5LY-hp-Ami">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="My-Smart-Home" translatesAutoresizingMaskIntoConstraints="NO" id="Ujx-yN-phf">
+                                <rect key="frame" x="161" y="28" width="279" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7Qg-aj-0Mr"/>
+                                    <constraint firstAttribute="width" constant="279" id="PIZ-pj-IHQ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5LY-hp-Ami" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="9wF-9k-gfN"/>
+                            <constraint firstItem="5LY-hp-Ami" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="DVe-ZY-5r9"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="5LY-hp-Ami" secondAttribute="bottom" id="Pkr-11-IOp"/>
+                            <constraint firstItem="Ujx-yN-phf" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" id="WbY-nV-Qgl"/>
+                            <constraint firstAttribute="trailing" secondItem="5LY-hp-Ami" secondAttribute="trailing" id="Wgc-Ic-bIZ"/>
+                            <constraint firstItem="Ujx-yN-phf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sTG-ZG-SRx"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="690" y="551"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="My-Smart-Home" width="625" height="86"/>
+        <image name="back" width="640" height="960"/>
+    </resources>
 </document>
